# ExpreGaze

./: .gitignore  README.md  pyproject.toml
blender/: EarlyP_GazeEvents_001.json  EarlyP_GazeEvents_002.json
blender/scripts/: BlinkDataOutput.py  EarlyP_RunJson001.py  EarlyP_RunJson002.py  TGT-Eyes_to_Gaze_Aim.py  blinkGene.py
configs/: base.yaml  default.yaml  project_layout.txt  tt0032138.yaml  tt1591095.yaml  tt1637725.yaml
configs/runs/: text_main_tt1591095.yaml  text_main_tt1637725.yaml  video_proxy_tt0032138.yaml  video_proxy_tt1591095.yaml  video_proxy_tt1637725.yaml
docs/: RUNBOOK.md
notebooks/: 01_proxy_pipeline_debug.ipynb
scripts/: analyze_proxy_failures.py  bootstrap_movienet.py  calibrate_gaze_direction.py  run_gaze_evidence_bakeoff.py  run_one_movie.sh
scripts/pipelines/: run_text_main.sh  run_video_proxy.sh
scripts/stages/: 00_process_one_movie_to_shot_level.sh  01_align_full_context_with_gpt.sh  02_build_candidate_sequences.sh  03_generate_llm_gaze_script.sh  04_extract_video_sequences.sh  05_run_face_detection_tracks.sh  06_run_openface_per_face.sh  07_build_track_identities.sh  08_build_proxy_gaze_script.sh  09_build_final_proxy_table.sh
src/expregaze/: config.py
src/expregaze/data/: align_full_context_with_gpt.py  candidates.py  generate_llm_gaze_script.py  process_one_movie_to_shot_level.py
src/expregaze/movienet/: shot_builder.py
src/expregaze/pipeline/: run_movie_pipeline.py
src/expregaze/proxy/: candidate_filter.py  labeling.py  stability.py  token_builder.py
tests/: test_video_proxy_pipeline.py
(+17 files in other folders)
